--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^6.0.5"
   },
   "dependencies": {
-    "@fontsource/noto-sans-mono": "^5.1.0"
+    "@fontsource/noto-sans-mono": "^5.1.0",
+    "dotenv": "^16.4.7"
   }
 }
