--- a/.github/workflows/deploy-to-s3.yml
+++ b/.github/workflows/deploy-to-s3.yml
@@ -3,7 +3,7 @@ name: Deploy Frontend to S3
 on:
   push:
     branches:
-      - main  # Run this workflow on pushes to the main branch
+      - master  # Run this workflow on pushes to the main branch
   workflow_dispatch:  # Allow manual triggering
 
 jobs:
