--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "vite": "^6.0.5"
   },
   "dependencies": {
-    "@fontsource/fira-code": "^5.1.1",
-    "dotenv": "^16.4.7"
+    "@fontsource/fira-code": "^5.1.1"
   }
 }
