--- a/.github/workflows/deploy-to-s3.yml
+++ b/.github/workflows/deploy-to-s3.yml
@@ -16,6 +16,13 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v3
 
+    # Step 1.5: Install Hugo
+    - name: Install Hugo
+      uses: peaceiris/actions-hugo@v2
+      with:
+        hugo-version: '0.115.4'
+        extended: true
+
     # Step 2: Set up Node.js
     - name: Setup Node.js
       uses: actions/setup-node@v3
