Init Hugo theme submodule in CI

--- a/.github/workflows/deploy-to-s3.yml
+++ b/.github/workflows/deploy-to-s3.yml
@@ -16,6 +16,10 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v3
 
+    # Step 1.1: Init Hugo theme submodules
+    - name: Init Hugo theme submodules
+      run: git submodule update --init --recursive
+
     # Step 1.5: Install Hugo
     - name: Install Hugo
       uses: peaceiris/actions-hugo@v2
