Some style tweaks for /writings

--- a/writings/hugo.toml
+++ b/writings/hugo.toml
@@ -6,6 +6,7 @@ theme = 'ananke'
 [params]
   description = "Tucker McLean's writings and thoughts"
   author = "Tucker McLean"
+  custom_css = ["css/custom.css"]
 
 [build]
   writeStats = true
