--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "writings/themes/ananke"]
-	path = writings/themes/ananke
-	url = https://github.com/theNewDynamic/gohugo-theme-ananke.git
+[submodule "writings/themes/terminal"]
+	path = writings/themes/terminal
+	url = https://github.com/panr/hugo-theme-terminal.git
