--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
   "dependencies": {
     "@fontsource/fira-code": "^5.1.1",
     "@fontsource/fira-sans": "^5.2.5"
-  }
+  },
+  "license": "MIT"
 }
